[package]
name = "explorador_sigiloso_hivemind"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp-tokio", "dns", "identify", "mdns", "gossipsub", "noise", "yamux"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
